# Unsloth-LLM-finetuningv1

./: .gitignore  Dockerfile  Fine_Tuning.ipynb  Qwen_LeetCoder.ipynb  README.md  cli-manual.md  docker-compose.yml  documentation.md  pyproject.toml  requirements-gpu.txt  requirements.txt
.github/workflows/: publish.yml  python-package.yml
.ipynb_checkpoints/: Qwen_LeetCoder-checkpoint.ipynb
.jupyter/desktop-workspaces/: default-37a8.jupyterlab-workspace
scripts/: app.py  cli.py  run_inference.py  run_training.py  smoke_test.py  train_movies.py
scripts/.ipynb_checkpoints/: app-checkpoint.py
src/: __init__.py  cli.py  config.py  data.py  inference.py  model.py  train.py
src/core/: factory.py  model_runner.py
src/utils/: env.py
