[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unsloth-finetuning"
version = "0.1.0"
description = "Professional Enterprise Pipeline for Unsloth LLM Finetuning with LoRA, TRL, and modular architecture"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Sriram Dayal", email = "your.email@example.com"}
]
maintainers = [
    {name = "Sriram Dayal", email = "your.email@example.com"}
]
keywords = [
    "llm", "finetuning", "unsloth", "lora", "qlora",
    "machine-learning", "transformers", "peft", "trl",
    "quantization", "deep-learning", "nlp"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
    "Environment :: GPU :: NVIDIA CUDA :: 12",
]

dependencies = [
    "torch>=2.5.1",
    "transformers>=4.45.0",
    "datasets>=2.14.0",
    "peft>=0.7.0",
    "trl>=0.7.0",
    "bitsandbytes>=0.41.0",
    "accelerate>=0.25.0",
    "huggingface-hub>=0.19.0",
    "pyyaml>=6.0",
    "pandas>=1.5.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "twine>=4.0.0",
    "build>=1.0.0",
]

gui = [
    "gradio>=4.0.0",
]

gpu = [
    "nvidia-cuda-runtime-cu12>=12.1.0",
    "nvidia-cuda-cupti-cu12>=12.1.0",
    "nvidia-cudnn-cu12>=8.9.0",
    "nvidia-cublas-cu12>=12.1.0",
    "nvidia-cuda-nvrtc-cu12>=12.1.0",
    "nvidia-curand-cu12>=10.3.2",
    "nvidia-cusolver-cu12>=11.4.5",
    "nvidia-cusparse-cu12>=12.1.0",
    "nvidia-nccl-cu12>=2.18.1",
    "nvidia-nvtx-cu12>=12.1.0",
]

unsloth = [
    "unsloth[colab-new] @ git+https://github.com/unslothai/unsloth.git",
    "unsloth",
]

all = [
    "unsloth-finetuning[dev,gui,gpu,unsloth]",
]

[project.urls]
Homepage = "https://github.com/Sriramdayal/Unsloth-LLM-finetuningv1"
Documentation = "https://github.com/Sriramdayal/Unsloth-LLM-finetuningv1/blob/main/documentation.md"
Repository = "https://github.com/Sriramdayal/Unsloth-LLM-finetuningv1"
Issues = "https://github.com/Sriramdayal/Unsloth-LLM-finetuningv1/issues"
Changelog = "https://github.com/Sriramdayal/Unsloth-LLM-finetuningv1/blob/main/CHANGELOG.md"
"Unsloth Official" = "https://github.com/unslothai/unsloth"

[project.scripts]
unsloth-cli = "src.cli:main"
unsloth-gui = "scripts.app:main"

[tool.setuptools]
packages = ["src", "scripts"]

[tool.setuptools.package-data]
src = ["*.yaml", "configs/*.yaml"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
